stock-audit/deployments/elastic_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: elastic-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /elasticsearch
        pathType: Prefix
        backend:
          service:
            name: elasticsearch
            port: 
              number: 9200
